[package]
name = "vrf-sgx"
version = "0.2.3"
description = "Fast and extensible Verifiable Random Function (VRF) library; currently supporting secp256k1, secp256r1 and sect163k1 curves"
keywords = ["vrf", "ecvrf", "secp256k1", "p256", "k163"]
categories = ["algorithms", "cryptography"]
license = "MIT"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"
homepage = "https://github.com/witnet/vrf-rs"
documentation = "https://docs.rs/vrf/"
repository = "https://github.com/witnet/vrf-rs"
readme = "README.md"
exclude = ["/.travis.yml"]

[features]
default = ["sgx"]
sgx=[]

[dependencies]
rust-secp256k1        = { version = "0.20", default-features = false, features = ["recovery"], package = "secp256k1" }
sgx_types             = { rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd              = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net", "thread"] }
sgx_tkey_exchange     = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_ucrypto           = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto           = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde-sgx             = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx        = { optional = true, package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde-big-array-sgx   = { optional = true, package = "serde-big-array", git = "https://github.com/mesalock-linux/serde-big-array-sgx" }
regex_sgx             = { optional = true, package = "regex", tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/regex-sgx.git"}
num-bigint            = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/num-bigint-sgx" }


[dev-dependencies]
clap = "2.32.0"
hex = "0.3.2"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
